--- a/Server/lib/Web/views/layout.pug
+++ b/Server/lib/Web/views/layout.pug
@@ -68,7 +68,7 @@ html
 				if locals.as_pc
 					a(href='?')= L('AS_MOBILE')
 				br
-				a.bottom-contact(href='http://blog.jjo.kr/', target='_blank')= L('CREATOR')
-				a.bottom-contact(href='mailto:op@jjo.kr', target='_blank') Contact op@jjo.kr
+				a.bottom-contact(href='http://now.pcor.me', target='_blank') Plus Now
+				a.bottom-contact(href='mailto:plus@sqlare.com', target='_blank') 관리자 문의하기
 			div.bottom-legal!= L('GPL')
 			+separator(10)
