--- a/Server/lib/Web/public/css/in_kkutu.css
+++ b/Server/lib/Web/public/css/in_kkutu.css
@@ -69,6 +69,25 @@ equ{
 #facebook-menu{
 	float: right;
 }
+
+/* 플러스끄투 커스텀 체크박스 */
+input[type="checkbox"]+label {
+    display: block;
+    font-weight: 500;
+    height: 20px;
+    font-size: 15px;
+    padding-left: 24px;
+    background: url(/img/kkutu/checkbox/off.png) no-repeat 0 0px / contain;
+}
+
+input[type='checkbox']:checked+label {
+    background: url('/img/kkutu/checkbox/on.png') no-repeat 0 1px / contain;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
 iframe{
 	border: none;
 }
@@ -103,68 +122,128 @@ iframe{
 	.lost{ color: #F59E9E; }
 .kkutu-menu{
 	float: left;
-	width: 1010px;
-	height: 30px;
+    bottom: 0;
+    position: fixed;
+    width: 100vw;
+    height: 70px;
+    background-color: white;
 }
+.kkutu-wrap{
+	max-width: 100rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+.kkutu-center{
+	display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: max-content;
+}
+
+.kkutu-menu button .fa {
+    display: block;
+    font-size: 30px;
+}
+
 .kkutu-menu button{
-	float: left;
-	border: none;
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
-	width: 98px;
-	height: 20px;
+	color: #546481;
+	text-align: center;
+    font-size: 20px;
+    float: left;
+    border: none;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    width: 98px;
+    height: 60px;
 }
 	.kkutu-menu button:hover{
 		margin-top: -5px;
-		height: 25px;
+		height: 65px;
+		color: #FFFFFF;
+		background: linear-gradient(180deg, rgba(39,134,255,1) 0%, rgba(21,169,255,1) 100%);
 	}
 	.kkutu-menu .toggled{
-		margin-top: 5px !important;
 		color: #EEEEEE;
-		background-color: #444444 !important;
+		background: linear-gradient(180deg, rgba(39,134,255,1) 0%, rgba(21,169,255,1) 100%);
 	}
 	.tiny-menu{
-		width: 20px !important;
+		width: 60px !important;
 	}
 .dialog{
 	display: none;
 	position: fixed;
 	padding: 5px;
-	border-radius: 10px;
 	color: #111111;
 	box-shadow: 0px 1px 1px #141414;
 	background-color: #EEEEEE;
 	z-index: 2;
 }
 	.dialog-bar{ float: left; margin: 3px 0px; width: 100%; }
-	.dialog-bar h4{ float: left; padding-top: 6px; width: 100px; text-align: center; }
-	.dialog-bar-value{ width: calc(100% - 100px) !important; text-align: left !important; }
-	.dialog-bar input, .dialog-bar select{ float: left; width: 187px; height: 14px; box-sizing: inherit; outline: none; }
+	.dialog-bar h4{ 
+		padding-left: 7px;
+		padding-top: 2px;
+		padding-bottom: 2px; }
+	.dialog-bar .opt{
+			color: white;
+			background-color: #546481;
+			padding-left: 7px;
+			padding-top: 2px;
+			padding-bottom: 2px; }
+	.dialog-bar-value{ text-align: left !important; color: #486AA3; }
+	.dialog-bar input, .dialog-bar select{ float: left; width: 187px; height: 24px; box-sizing: inherit; outline: none; font-size:16px; }
 	.dialog-bar label{ font-size: 13px; }
-	.dialog-bar button{ float: left; }
-		.dialog-opt{ float: left; width: 100px; }
+	.dialog-bar h4{ font-size: 16px; margin-top: 6px; margin-bottom: 6px; }
+	.dialog-bar button{ border: 1px solid #878D99;
+		color: #434D61;
+		background-color: #EAEAEA;
+		float: left;
+		margin-right: 5px;
+		width: 60px;
+		/* font-size: 16px; */
+		height: 20px;}
+		.dialog-opt{ float: left; margin-right:20px; font-size: 18px;}
 	.tail-button{ margin-top: 7px; }
-	.tail-button button{ float: right; margin-right: 5px; width: 80px; height: 20px; }
+	.tail-button button {
+	border: 1px solid #878D99;
+	color: #434D61;
+	background-color: #EAEAEA;
+    float: center;
+    margin-right: 5px;
+    width: 60px;
+    height: 20px;
+}
+	.primaryBtn{
+		border: 1px solid #154792!important;
+		color: white!important;
+		background: linear-gradient(180deg, rgba(39,134,255,1) 0%, rgba(21,169,255,1) 100%);
+	}
 	.dialog .closeBtn{
 		float: right;
 		border-radius: 6px;
 		margin-top: 1px;
-		width: 12px;
+		width: 16px;
 		height: 12px;
-		background-color: #EE5555;
 	}
-	.dialog .closeBtn:hover{ background-color: #EE7777; }
+	.closeBtn::after {
+		content: "×";
+	}
+	.dialog .closeBtn:hover{ color: cyan; }
 	.dialog-head{
-		padding: 3px;
+		padding: 7px;
 		border-bottom: 1px solid #CCCCCC;
-		border-radius: 5px;
 		margin-bottom: 5px;
-		height: 12px;
-		color: #222222;
-		font-size: 11px;
-		background-color: #DDDDDD;
+		margin-left: -5px;
+		margin-right: -5px;
+		height: 28px;
+		color: #ffffff;
+		font-size: 20px;
+		margin-top: -2px;
+		border-width: 3px;
+		border: #3E5B7B;
+		background: rgb(7,0,129);
+		background: linear-gradient(180deg, #225CAA 0%, #0E3F8B 100%);
 	}
-		.dialog-head .dialog-title{ float: left; cursor: move; }
+		.dialog-head .dialog-title{ text-align: center;float: left; cursor: move; }
 #replay-players{ height: 140px; overflow-y: scroll; }
 	.replay-player-bar{ float: left; width: 100%; }
 		.replay-player-bar img{ float: left; margin-right: 3px; width: 20px; height: 20px; }
@@ -893,9 +972,9 @@ iframe{
 	100%	{ font-size: 12px; color: #FFFFFF; background-color: rgba(0, 0, 0, 0); }
 }
 @keyframes ReadyBlink{
-	0%		{ margin-top: 0px; height: 20px; }
-	50%		{ margin-top: -5px; height: 25px; }
-	100%	{ margin-top: 0px; height: 20px; }
+	0%		{ margin-top: 0px; height: 60px; }
+	50%		{ margin-top: -5px; height: 65px; }
+	100%	{ margin-top: 0px; height: 60px; }
 }
 @keyframes CurrentBlink{
 	0%		{ border-color: #3EFF3E; }
