--- a/Server/lib/Web/public/css/style.css
+++ b/Server/lib/Web/public/css/style.css
@@ -21,12 +21,14 @@
 	src: url('../media/NanumBarunGothicLight.woff') format('woff');
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+
 body{
 	color: #EEEEEE;
 	padding: 0px;
 	margin: 0px;
 	min-width: 480px;
-	font-family: NBGothic, 돋움;
+	font-family: 'Noto Sans KR', 돋움;
 }
 a{
 	color: inherit;
@@ -37,7 +39,6 @@ input, select, textarea{
 	font-family: inherit;
 	padding: 5px;
 	border: 1px solid #AAAAAA;
-	border-radius: 10px;
 	resize: none;
 }
 button{
@@ -46,7 +47,6 @@ button{
 	font-family: inherit;
 	padding: 5px;
 	border: 1px solid #AAAAAA;
-	border-radius: 10px;
 	background-color: #EEEEEE;
 	transition: all 200ms ease;
 }
@@ -144,21 +144,39 @@ span{
 	transition: color 300ms ease;
 }
 #account-info:hover{ color: #EEEEEE; }
+
+
+@keyframes scroller {
+	from {
+	  -moz-transform: translateX(100%);
+	  -webkit-transform: translateX(100%);
+	  transform: translateX(100%);
+	}
+	to {
+	  -moz-transform: translateX(-100%);
+	  -webkit-transform: translateX(-100%);
+	  transform: translateX(-100%);
+	}
+}
+
 #global-notice{
-	margin-top: 30px;
-	color: #111111;
+	margin-top: 60px;
+	color: white;
 	text-align: center;
-	font-weight: bold;
 	cursor: pointer;
 	z-index: 5;
+	animation: scroller 60s linear infinite;
 }
+
 #gn-content{
 	position: absolute;
 	left: 0;
 	right: 0;
-	background-color: #EEBB33;
+	background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
 	padding: 3px 0px;
 	z-index: -1;
+	
 }
 .searching{
 	color: #EEEEEE;
